# bao-vscode-ext

./: .gitignore  .pre-commit-config.yaml  .vscode-test.mjs  .vscodeignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  biome.json  package-lock.json  package.json  package.nls.de.json  package.nls.ja.json  package.nls.json  package.nls.zh-cn.json  package.nls.zh-tw.json  tsconfig.json  tsconfig.test.json
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pre-commit.yml  test.yml
l10n/: bundle.l10n.de.json  bundle.l10n.ja.json  bundle.l10n.json  bundle.l10n.zh-cn.json  bundle.l10n.zh-tw.json
media/css/: welcome.css
media/js/: welcome.js
resources/templates/out-of-tree/: Cargo.toml
resources/templates/out-of-tree/dabao/: Cargo.toml
resources/tools-bao/: README.md  bao.py
src/: constants.ts  extension.ts  index.ts  tree.ts
src/commands/: build.ts  buildFlashMonitor.ts  clean.ts  collectDiagnostics.ts  commandIds.ts  createApp.ts  flash.ts  flashForceAll.ts  index.ts  openMonitor.ts  openSettings.ts  selectApp.ts  selectBuildTarget.ts  setBootloaderSerialPort.ts  setBuildMode.ts  setFlashLocation.ts  setFlashMethod.ts  setFlashPort.ts  setMonitorBaud.ts  setMonitorDefaultPort.ts  setMonitorPort.ts  setRunSerialPort.ts  withCommand.ts
src/panels/: monitorPanel.ts
src/services/: appService.ts  artifactsService.ts  baoRunnerService.ts  bootService.ts  buildService.ts  cloneXousCore.ts  configService.ts  diagnosticsService.ts  flashService.ts  httpService.ts  logService.ts  (+20 more)
(+80 files in other folders)
