[package]
name = "{{NAME}}"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"
num-derive = { version = "0.4.2", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
xous = { git = "https://github.com/betrusted-io/xous-core", rev = "{{REV}}" }
xous-ipc = { git = "https://github.com/betrusted-io/xous-core", rev = "{{REV}}" }
log-server = { package = "xous-api-log", git = "https://github.com/betrusted-io/xous-core", rev = "{{REV}}" }
xous-names = { package = "xous-api-names", git = "https://github.com/betrusted-io/xous-core", rev = "{{REV}}" }
utralib = { git = "https://github.com/betrusted-io/xous-core", rev = "{{REV}}", optional = true, default-features = false }

[features]
bao1x = ["utralib/bao1x"]
board-dabao = []
default = []
